--- a/index.html
+++ b/index.html
@@ -52,7 +52,27 @@
                             <a href="" class="header__navbar-icon header__navbar-icon-link">
                                 <i class="fa-solid fa-bell"></i>
                             </a>
-                            <a href="" class="header__navbar-item-link">Thông báo</a>
+                            <a href="" class="header__navbar-item-link">
+                                Thông báo
+                            </a>
+                            <div class="header__notify">
+                                <header class="header__notify-header">    
+                                    <h3>Thong bao moi nhan </h3>
+                                </header>
+                                
+                                    <ul class="header__notify-list">
+                                        <li class="header__notify-item">
+                                            <a href="">
+                                                <img src="https://down-vn.img.susercontent.com/file/vn-11134207-7r98o-lvq0n3i16wnuab_tn.webp" alt="" class="header__notify-img">
+                                                <div class="header__notify-info">
+                                                    <span class="header__notify-name">Quan ao bong da chinh hang</span>
+                                                    <span class="header__notify-description">Mo ta Quan ao bong da chinh hang</span>
+
+                                                </div>
+                                            </a>
+                                        </li>
+                                    </ul>
+                            </div>
                         </li>
                         <li class="header__navbar-item">
                             <a href="" class="header__navbar-icon header__navbar-icon-link">
